erDiagram
    review_subjects {
        varchar(100) id PK "required"
        json title "required"
    }
    schools {
        uuid id PK "required"
        varchar(255) name "required"
        timestamp_with_time_zone created_at "required"
    }
    review_chapters {
        varchar(100) id PK "required"
        varchar(100) subject_id FK "required"
        json title "required"
    }
    review_subjects ||..o{ review_chapters : "subject_id"
    users {
        uuid id PK "required"
        uuid school_id FK "required"
        varchar(255) email UK "required"
        varchar(255) full_name "required"
        varchar(20) role "required"
        varchar(255) hashed_password "required"
        timestamp_with_time_zone created_at "required"
        boolean is_active "required"
        timestamp_with_time_zone updated_at "required"
        text avatar_url "nullable"
    }
    schools ||..o{ users : "school_id"
    conversations {
        uuid id PK "required"
        uuid school_id FK "required"
        uuid student_id FK "required"
        timestamp_with_time_zone started_at "required"
        timestamp_with_time_zone ended_at "nullable"
    }
    schools ||..o{ conversations : "school_id"
    users ||..o{ conversations : "student_id"
    mastery_records {
        uuid id PK "required"
        uuid school_id FK "required"
        uuid student_id FK "required"
        varchar(100) subject_id FK "required"
        varchar(100) concept_ref "required"
        float mastery_score "required"
        varchar(20) mastery_band "required"
        integer evidence_count "required"
        integer attempt_count "required"
        integer assisted_evidence_count "required"
        varchar(100) dominant_error_type "nullable"
        varchar(20) calculation_version "required"
        timestamp_with_time_zone last_attempt_at "required"
        timestamp_with_time_zone created_at "required"
        timestamp_with_time_zone updated_at "required"
    }
    schools ||..o{ mastery_records : "school_id"
    users ||..o{ mastery_records : "student_id"
    review_subjects ||..o{ mastery_records : "subject_id"
    refresh_tokens {
        uuid id PK "required"
        uuid user_id FK "required"
        varchar(64) token_hash UK "required"
        timestamp_with_time_zone expires_at "required"
        timestamp_with_time_zone revoked_at "nullable"
        timestamp_with_time_zone created_at "required"
    }
    users ||..o{ refresh_tokens : "user_id"
    review_lessons {
        varchar(100) id PK "required"
        json content "required"
        varchar(100) chapter_id FK "required"
    }
    review_chapters ||..o{ review_lessons : "chapter_id"
    student_profiles {
        uuid id PK "required"
        uuid school_id FK "required"
        uuid student_id FK,UK "required"
        timestamp_with_time_zone created_at "required"
        timestamp_with_time_zone updated_at "required"
    }
    schools ||..o{ student_profiles : "school_id"
    users ||..o| student_profiles : "student_id"
    profile_traits {
        uuid id PK "required"
        uuid school_id FK "required"
        uuid profile_id FK "required"
        uuid source_conversation_id FK "nullable"
        varchar(50) category "required"
        varchar(100) trait_key "required"
        varchar(255) title "required"
        text description "required"
        text teaching_tip "nullable"
        float score "required"
        varchar(20) confidence "required"
        timestamp_with_time_zone updated_at "required"
    }
    student_profiles ||..o{ profile_traits : "profile_id"
    schools ||..o{ profile_traits : "school_id"
    conversations |o..o{ profile_traits : "source_conversation_id"
    review_sessions {
        uuid id PK "required"
        uuid school_id FK "required"
        uuid student_id FK "required"
        varchar(100) lesson_id FK "required"
        json content "required"
        json state "required"
        integer version "required"
        timestamp_with_time_zone created_at "required"
        timestamp_with_time_zone updated_at "required"
    }
    review_lessons ||..o{ review_sessions : "lesson_id"
    schools ||..o{ review_sessions : "school_id"
    users ||..o{ review_sessions : "student_id"
    review_attempts {
        uuid id PK "required"
        uuid school_id FK "required"
        uuid student_id FK "required"
        uuid session_id FK "required"
        varchar(100) lesson_id FK "required"
        uuid request_id "required"
        varchar(100) question_id "required"
        varchar(100) concept_ref "required"
        text response_text "required"
        varchar(100) option_id "nullable"
        float correctness_score "required"
        varchar(100) error_type "nullable"
        integer hint_level "required"
        boolean assisted "required"
        integer attempt_number "required"
        varchar(2) locale "required"
        timestamp_with_time_zone created_at "required"
    }
    review_lessons ||..o{ review_attempts : "lesson_id"
    schools ||..o{ review_attempts : "school_id"
    review_sessions ||..o{ review_attempts : "session_id"
    users ||..o{ review_attempts : "student_id"
    review_session_summaries {
        uuid id PK "required"
        uuid school_id FK "required"
        uuid student_id FK "required"
        uuid session_id FK,UK "required"
        varchar(100) lesson_id FK "required"
        json concepts "required"
        integer total_attempts "required"
        varchar(20) calculation_version "required"
        timestamp_with_time_zone completed_at "required"
    }
    review_lessons ||..o{ review_session_summaries : "lesson_id"
    schools ||..o{ review_session_summaries : "school_id"
    review_sessions ||..o| review_session_summaries : "session_id"
    users ||..o{ review_session_summaries : "student_id"
